keys in --output-keyvalue can be truncated
Note how the last key is modem.3gpp.scan-networks.value[10
(instead of modem.3gpp.scan-networks.value[10]
with a closing square bracket):
$ mmcli -m 15 --timeout=1800 --3gpp-scan --output-keyvalue
modem.3gpp.scan-networks.length : 10
modem.3gpp.scan-networks.value[1] : operator-code: 22603, operator-name: TELEKOM.RO, access-technologies: gprs, availability: available
modem.3gpp.scan-networks.value[2] : operator-code: 22603, operator-name: TELEKOM.RO, access-technologies: gprs, availability: available
modem.3gpp.scan-networks.value[3] : operator-code: 22605, operator-name: RO Digi.Mobil, access-technologies: gprs, availability: unknown
modem.3gpp.scan-networks.value[4] : operator-code: 22605, operator-name: RO Digi.Mobil, access-technologies: gprs, availability: unknown
modem.3gpp.scan-networks.value[5] : operator-code: 22601, operator-name: RO Vodafone RO, access-technologies: gprs, availability: available
modem.3gpp.scan-networks.value[6] : operator-code: 22601, operator-name: RO Vodafone RO, access-technologies: gprs, availability: available
modem.3gpp.scan-networks.value[7] : operator-code: 22601, operator-name: RO Vodafone RO, access-technologies: gprs, availability: available
modem.3gpp.scan-networks.value[8] : operator-code: 22610, operator-name: orange, access-technologies: gprs, availability: available
modem.3gpp.scan-networks.value[9] : operator-code: 22610, operator-name: orange, access-technologies: gprs, availability: available
modem.3gpp.scan-networks.value[10 : operator-code: 22610, operator-name: orange, access-technologies: gprs, availability: unknown
This is with mmcli 1.10.2.